fixes results display issue in tic tac tyrion when name is too long for div

--- a/src/App.css
+++ b/src/App.css
@@ -269,7 +269,7 @@ h3 {
 
 .result {
 	color: white;
-	width: 35%;
+	width: auto;
 	height: 45px;
 	background-color: rgba(0, 0, 0, 0.7);
 	padding: 10px;
